
    *******************************************************
    Warnings, errors, malfunctions, code patches, suggestions
    Support Forum: http://forum.darkbot.org
    *******************************************************

Darkbot 7f1: Feb 28th, 2004

	- You can make color specific responses now.  Please let me
	  know if any problems arise from this.

	- Made a quick fix to a bug which caused crashing in randq.

	- Private message responses no longer have that "sent by" 
	  thing on them.  It was annoying, and pointless.

	- Renamed the log() function db_log() to avoid a conflict
	  with a function internal with gcc.  Apparently this only
	  affects newer versions of gcc.  

	- Added "make convertdb", which will compile the database
	  conversion utility, which encrypts the passwords in your
	  userlist.db file.

	- Removed two unused variables in convertdb.c.  I also changed
	  'unlink' to 'remove', to comply with the ANSI standard.

	- Changed forum URL to http://forum.darkbot.org, since that
          works too, looks cooler, and is shorter. :)

	- Fixed a bug that caused the bot to never respond to anything
	  after being killed.  The same problem was also fixed in a 
	  number of other situations that it was popping up. gs26() 
 	  was being called both before, and during prepare_bot(), so 
          I made the call happen only during prepare_bot().  

	- Fixed a minor flaw in convertdb.c.  It said the syntax was
	  "convertdb -convert", even if the executable wasn't named
	  convertdb.

	- Taiwanish file got dumped somehow, it's back now.

	- New setting in defines.h, AUTOHELP_GUESTS, makes the bot send
	  a message to the channel, whenever a user with the word "Guest"
	  in their nickname joins, asking them if they need help.  This 
	  can be used in help channels, to avoid Guest users just joining
          the channel, and moving on because nobody is talking.

	- I'm fairly sure I have dbcron fixed now.  I can't test it, 