@@ -4,7 +4,12 @@
     Support Forum: http://forum.darkbot.org
     *******************************************************
 
-Darkbot 7f1: Feb 28th, 2004
+Darkbot 7f1: March 30, 2004
+
+	- Fixed a bug that happened while make tried to cp the binary
+	  to the toplevel distribution directory.  It now compiles the
+	  binary directory to the toplevel, and no longer needs to use
+ 	  "cp".
 
 	- You can make color specific responses now.  Please let me
 	  know if any problems arise from this.
